--- a/pages/home/style.css
+++ b/pages/home/style.css
@@ -60,3 +60,17 @@ body {
     font-family: cursive;
     font-weight: 600;
 }
+
+a {
+    text-decoration: none;
+    color: inherit;
+    outline: none;      
+}
+
+a:visited,
+a:active,
+a:hover,
+a:focus {
+    text-decoration: none;
+    color: inherit;
+}
